@@ -21,6 +21,7 @@ Version 6.6 - not yet released
   - new waypoint location editor (#343)
   - show required glide ratio in waypoint details (#1573)
   - add airspace ack button to map item list (#2139)
+  - additionally show airspace altitude in feet (#2379)
 * tasks
   - MAT tasks (#563)
   - custom symmetric quadrant (#2125)
